<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAdRDC95J84Aa405tge0Ad3jeMqcGY83U0</string>

    <string name="app_name">cartrack</string>

    <string name="login_title">Login</string>
    <string name="select_country_hint">Country</string>
    <string name="enter_phone_number_hint">Phone</string>
    <string name="enter_password_hint">Password</string>
    <string name="remember_me_title">Remember Me</string>
    <string name="label_network_dropped">No Network</string>
    <string name="label_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="login_button">Login</string>

    <string name="user_name">%1$s ,%2$s</string>

    <string name="current_location">Current\n Location</string>
    <string name="user_location">User\n Location</string>
    <string name="label_text_request_location">Please allow location permission</string>
    <string name="label_setting">Setting</string>

    <string name="user_detail_name_title">Name</string>
    <string name="user_detail_email_title">Email</string>
    <string name="user_detail_address_title">Address</string>
    <string name="user_detail_phone_title">Phone</string>
    <string name="user_detail_website_title">Website</string>
    <string name="user_detail_company_title">Company</string>

    <string name="logout_title">logout</string>


</resources>