<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cartrack.viewmodel.login.LoginViewModel" />

        <variable
            name="view"
            type="com.cartrack.view.login.LoginActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="30dp"
        android:transitionName="transition_login"
        tools:context=".Common.LoginSignup.Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/login_title"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">

                <LinearLayout
                    android:id="@+id/llPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_code_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        app:ccp_hintExampleNumber="true"
                        app:ccp_textSize="@dimen/text_normal">

                    </com.hbb20.CountryCodePicker>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_phone_number"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:hint="@string/enter_phone_number_hint"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/black">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_phone_number_editText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:onTextChanged="@{viewModel::onPhoneChanged}"
                            android:text="@{viewModel.phone}"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llPhone"
                    android:hint="@string/enter_password_hint"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/outline_password"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:text="@{viewModel.password}"
                        android:onTextChanged="@{viewModel::onPasswordChanged}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:id="@+id/rl_remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password"
                    android:layout_marginTop="10dp">


                    <CheckBox
                        android:id="@+id/remember_me"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/black"
                        android:checked="@={viewModel.rememberMe}"
                        android:text="@string/remember_me_title"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_remember_me"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:enabled="@{viewModel.enableLogin}"
                    android:onClick="@{() -> view.startLogin()}"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/login_button" />

                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>